updated release workflow, removed jetstream

--- a/api/crds/kubefox.xigxog.io_appdeployments.yaml
+++ b/api/crds/kubefox.xigxog.io_appdeployments.yaml
@@ -166,7 +166,7 @@ spec:
           status:
             description: AppDeploymentStatus defines the observed state of AppDeployment
             properties:
-              ready:
+              available:
                 type: boolean
             type: object
         type: object
