--- a/components/operator/templates/instance/validating-webhook.yaml
+++ b/components/operator/templates/instance/validating-webhook.yaml
@@ -53,5 +53,4 @@ webhooks:
           - UPDATE
         resources:
           - appdeployments
-          - releases
-          - resolvedenvironments
+          - virtualenvsnapshots
