--- a/api/crds/kubefox.xigxog.io_virtualenvsnapshots.yaml
+++ b/api/crds/kubefox.xigxog.io_virtualenvsnapshots.yaml
@@ -4,15 +4,15 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.13.0
-  name: environments.kubefox.xigxog.io
+  name: virtualenvsnapshots.kubefox.xigxog.io
 spec:
   group: kubefox.xigxog.io
   names:
-    kind: ClusterVirtualEnv
-    listKind: ClusterVirtualEnvList
-    plural: environments
-    singular: clustervirtualenv
-  scope: Cluster
+    kind: VirtualEnvSnapshot
+    listKind: VirtualEnvSnapshotList
+    plural: virtualenvsnapshots
+    singular: virtualenvsnapshot
+  scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
@@ -56,12 +56,35 @@ spec:
                   - type
                   type: object
                 type: object
+              snapshotTime:
+                format: date-time
+                type: string
+              source:
+                properties:
+                  kind:
+                    enum:
+                    - ClusterVirtualEnv
+                    - VirtualEnv
+                    type: string
+                  name:
+                    minLength: 1
+                    type: string
+                  resourceVersion:
+                    minLength: 1
+                    type: string
+                required:
+                - kind
+                - name
+                - resourceVersion
+                type: object
               vars:
                 type: object
                 x-kubernetes-preserve-unknown-fields: true
+            required:
+            - snapshotTime
+            - source
             type: object
           details:
-            description: EnvDetails defines additional details of VirtualEnv
             properties:
               adapters:
                 additionalProperties:
@@ -93,6 +116,24 @@ spec:
             type: string
           metadata:
             type: object
+          spec:
+            properties:
+              releasePolicy:
+                properties:
+                  appDeploymentPolicy:
+                    enum:
+                    - VersionOptional
+                    - VersionRequired
+                    type: string
+                  virtualEnvPolicy:
+                    enum:
+                    - SnapshotOptional
+                    - SnapshotRequired
+                    type: string
+                type: object
+            type: object
+        required:
+        - spec
         type: object
     served: true
     storage: true
