--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 mkdocs = "==1.5.3"
 mkdocs-material = "==9.4.1" # versions above this screw up the nav
 mkdocs-mermaid2-plugin = "==1.1.1"
+mkdocs-awesome-pages-plugin = "==2.9.2"
 
 [requires]
 python_version = "3"
