--- a/examples/hello-world/kubefox/hack/environments/prod.yaml
+++ b/examples/hello-world/kubefox/hack/environments/prod.yaml
@@ -1,8 +1,12 @@
 apiVersion: kubefox.xigxog.io/v1alpha1
-kind: VirtualEnvironment
+kind: VirtualEnv
 metadata:
   name: prod
 spec:
+  releasePolicy:
+    appDeploymentPolicy: VersionRequired
+    virtualEnvPolicy: SnapshotRequired
+data:
   vars:
     subPath: prod
     who: Universe
