--- a/examples/hello-world/kubefox/hack/environments/qa.yaml
+++ b/examples/hello-world/kubefox/hack/environments/qa.yaml
@@ -1,8 +1,12 @@
 apiVersion: kubefox.xigxog.io/v1alpha1
-kind: VirtualEnvironment
+kind: VirtualEnv
 metadata:
   name: qa
 spec:
+  releasePolicy:
+    appDeploymentPolicy: VersionOptional
+    virtualEnvPolicy: SnapshotOptional
+data:
   vars:
     subPath: qa
     who: World
