--- a/api/crds/kubefox.xigxog.io_appdeployments.yaml
+++ b/api/crds/kubefox.xigxog.io_appdeployments.yaml
@@ -106,7 +106,6 @@ spec:
                                 type: boolean
                             required:
                             - required
-                            - type
                             - unique
                             type: object
                           type: object
@@ -115,6 +114,30 @@ spec:
                         routes:
                           items:
                             properties:
+                              envSchema:
+                                additionalProperties:
+                                  properties:
+                                    required:
+                                      type: boolean
+                                    type:
+                                      enum:
+                                      - array
+                                      - boolean
+                                      - number
+                                      - string
+                                      type: string
+                                    unique:
+                                      description: Unique indicates that this environment
+                                        variable must have a unique value across all
+                                        environments. If the value is not unique then
+                                        making a dynamic request or creating a release
+                                        that utilizes this variable will fail.
+                                      type: boolean
+                                  required:
+                                  - required
+                                  - unique
+                                  type: object
+                                type: object
                               id:
                                 type: integer
                               priority:
