added k8s crds to docs

--- a/api/crds/kubefox.xigxog.io_appdeployments.yaml
+++ b/api/crds/kubefox.xigxog.io_appdeployments.yaml
@@ -85,36 +85,18 @@ spec:
                             - type
                             type: object
                           type: object
-                        envSchema:
-                          additionalProperties:
-                            properties:
-                              required:
-                                type: boolean
-                              type:
-                                enum:
-                                - array
-                                - boolean
-                                - number
-                                - string
-                                type: string
-                              unique:
-                                description: Unique indicates that this environment
-                                  variable must have a unique value across all environments.
-                                  If the value is not unique then making a dynamic
-                                  request or creating a release that utilizes this
-                                  variable will fail.
-                                type: boolean
-                            required:
-                            - required
-                            - unique
-                            type: object
-                          type: object
                         image:
                           type: string
                         routes:
                           items:
                             properties:
-                              envSchema:
+                              id:
+                                type: integer
+                              priority:
+                                type: integer
+                              rule:
+                                type: string
+                              virtualEnvSchema:
                                 additionalProperties:
                                   properties:
                                     required:
@@ -138,12 +120,6 @@ spec:
                                   - unique
                                   type: object
                                 type: object
-                              id:
-                                type: integer
-                              priority:
-                                type: integer
-                              rule:
-                                type: string
                             required:
                             - id
                             - rule
@@ -156,6 +132,30 @@ spec:
                           - kubefox
                           - http
                           type: string
+                        virtualEnvSchema:
+                          additionalProperties:
+                            properties:
+                              required:
+                                type: boolean
+                              type:
+                                enum:
+                                - array
+                                - boolean
+                                - number
+                                - string
+                                type: string
+                              unique:
+                                description: Unique indicates that this environment
+                                  variable must have a unique value across all environments.
+                                  If the value is not unique then making a dynamic
+                                  request or creating a release that utilizes this
+                                  variable will fail.
+                                type: boolean
+                            required:
+                            - required
+                            - unique
+                            type: object
+                          type: object
                       required:
                       - commit
                       - type
