--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -71,6 +71,9 @@ markdown_extensions:
   - attr_list
   - def_list
   - md_in_html
+  - pymdownx.caret
+  - pymdownx.mark
+  - pymdownx.tilde
   - pymdownx.details
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
@@ -89,4 +92,5 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - toc:
-      permalink: true
+      permalink: false
+      toc_depth: 3
