--- a/examples/go/hello-world/kubefox/hack/environments/prod.yaml
+++ b/examples/go/hello-world/kubefox/hack/environments/prod.yaml
@@ -3,7 +3,7 @@ kind: VirtualEnv
 metadata:
   name: prod
 spec:
-  releasePolicy:
+  releasePolicies:
     appDeploymentPolicy: VersionRequired
     virtualEnvPolicy: SnapshotRequired
 data:
