--- a/api/crds/kubefox.xigxog.io_clustervirtualenvs.yaml
+++ b/api/crds/kubefox.xigxog.io_clustervirtualenvs.yaml
@@ -25,35 +25,8 @@ spec:
             type: string
           data:
             properties:
-              adapters:
+              secrets:
                 additionalProperties:
-                  properties:
-                    followRedirects:
-                      description: Defaults to never.
-                      enum:
-                      - Never
-                      - Always
-                      - SameHost
-                      type: string
-                    headers:
-                      type: object
-                      x-kubernetes-preserve-unknown-fields: true
-                    insecureSkipVerify:
-                      description: InsecureSkipVerify controls whether a client verifies
-                        the server's certificate chain and host name. If InsecureSkipVerify
-                        is true, any certificate presented by the server and any host
-                        name in that certificate is accepted. In this mode, TLS is
-                        susceptible to machine-in-the-middle attacks.
-                      type: boolean
-                    type:
-                      enum:
-                      - db
-                      - http
-                      type: string
-                    url:
-                      x-kubernetes-preserve-unknown-fields: true
-                  required:
-                  - type
                   type: object
                 type: object
               vars:
@@ -62,7 +35,9 @@ spec:
             type: object
           details:
             properties:
-              adapters:
+              description:
+                type: string
+              secrets:
                 additionalProperties:
                   properties:
                     description:
@@ -71,8 +46,6 @@ spec:
                       type: string
                   type: object
                 type: object
-              description:
-                type: string
               title:
                 type: string
               vars:
@@ -94,13 +67,33 @@ spec:
             type: object
           spec:
             properties:
-              releasePolicy:
+              releasePolicies:
                 properties:
                   appDeploymentPolicy:
                     enum:
                     - VersionOptional
                     - VersionRequired
                     type: string
+                  historyLimits:
+                    properties:
+                      ageDays:
+                        description: Maximum age of the Release to keep in history.
+                          Once the limit is reached the oldest Release in history
+                          will be deleted. Age is based on archiveTime.
+                        type: integer
+                      count:
+                        description: Maximum number of Releases to keep in history.
+                          Once the limit is reached the oldest Release in history
+                          will be deleted. Age is based on archiveTime. Default 10.
+                        type: integer
+                    type: object
+                  pendingDeadlineSeconds:
+                    description: If the pending Request cannot be activated before
+                      the deadline it will be considered failed. If the Release becomes
+                      available for activation after the deadline has been exceeded,
+                      it will not be activated.
+                    minimum: 3
+                    type: integer
                   virtualEnvPolicy:
                     enum:
                     - SnapshotOptional
