--- a/api/crds/kubefox.xigxog.io_virtualenvsnapshots.yaml
+++ b/api/crds/kubefox.xigxog.io_virtualenvsnapshots.yaml
@@ -24,69 +24,25 @@ spec:
               internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
           data:
+            description: Data is a copy of the source VirtualEnv's data object. If
+              provided at creation time then the source VirtualEnv's resourceVersion
+              and current dataChecksum must also be provided. If set to nil at creation
+              time then the current data object, resourceVersion, and dataChecksum
+              of the source VirtualEnv will automatically be copied.
             properties:
-              adapters:
+              secrets:
                 additionalProperties:
-                  properties:
-                    followRedirects:
-                      description: Defaults to never.
-                      enum:
-                      - Never
-                      - Always
-                      - SameHost
-                      type: string
-                    headers:
-                      type: object
-                      x-kubernetes-preserve-unknown-fields: true
-                    insecureSkipVerify:
-                      description: InsecureSkipVerify controls whether a client verifies
-                        the server's certificate chain and host name. If InsecureSkipVerify
-                        is true, any certificate presented by the server and any host
-                        name in that certificate is accepted. In this mode, TLS is
-                        susceptible to machine-in-the-middle attacks.
-                      type: boolean
-                    type:
-                      enum:
-                      - db
-                      - http
-                      type: string
-                    url:
-                      x-kubernetes-preserve-unknown-fields: true
-                  required:
-                  - type
                   type: object
-                type: object
-              snapshotTime:
-                format: date-time
-                type: string
-              source:
-                properties:
-                  kind:
-                    enum:
-                    - ClusterVirtualEnv
-                    - VirtualEnv
-                    type: string
-                  name:
-                    minLength: 1
-                    type: string
-                  resourceVersion:
-                    minLength: 1
-                    type: string
-                required:
-                - kind
-                - name
-                - resourceVersion
                 type: object
               vars:
                 type: object
                 x-kubernetes-preserve-unknown-fields: true
-            required:
-            - snapshotTime
-            - source
             type: object
           details:
             properties:
-              adapters:
+              description:
+                type: string
+              secrets:
                 additionalProperties:
                   properties:
                     description:
@@ -95,8 +51,6 @@ spec:
                       type: string
                   type: object
                 type: object
-              description:
-                type: string
               title:
                 type: string
               vars:
@@ -118,19 +72,35 @@ spec:
             type: object
           spec:
             properties:
-              releasePolicy:
+              source:
+                description: VirtualEnv that this snapshot is of. Note, ClusterVirtualEnvs
+                  cannot be snapshotted.
                 properties:
-                  appDeploymentPolicy:
-                    enum:
-                    - VersionOptional
-                    - VersionRequired
+                  dataChecksum:
+                    description: DataChecksum is the hash of the VirtualEnv's data
+                      this snapshot is of. If data is provided at creation of the
+                      VirtualEnvSnapshot then dataChecksum must match the current
+                      dataChecksum of the VirtualEnv. If data is not provided at creation
+                      time dataChecksum will be populated automatically.
+                    format: int64
+                    type: integer
+                  name:
+                    description: Name of the VirtualEnv this snapshot is of. Note,
+                      ClusterVirtualEnvs cannot be snapshotted.
+                    minLength: 1
                     type: string
-                  virtualEnvPolicy:
-                    enum:
-                    - SnapshotOptional
-                    - SnapshotRequired
+                  resourceVersion:
+                    description: ResourceVersion of the VirtualEnv this snapshot is
+                      of. If data is provided at creation of the VirtualEnvSnapshot
+                      then resourceVersion must match the current resourceVersion
+                      of the VirtualEnv. If data is not provided at creation time
+                      resourceVersion will be populated automatically.
                     type: string
+                required:
+                - name
                 type: object
+            required:
+            - source
             type: object
         type: object
     served: true
